fix: change header `z-index`

--- a/client/src/styles/invite/styles.scss
+++ b/client/src/styles/invite/styles.scss
@@ -112,7 +112,7 @@
     backdrop-filter: blur(2px);
     padding: 0 20px;
     box-sizing: border-box;
-    z-index: 2;
+    z-index: 11;
 
     .title {
         font-weight: 900;
